--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "torch>=2.5.0",
     "trl==0.19.0",
     "transformers>=4.51.0",
+    "streamlit"
 ]
 requires-python = ">=3.10"
 authors = [{name = "MBZUAI developers"}]
